Changed the way to locate grammar and Java 17 migration
Now it is located by the grammar name and the version.
The catalog-based location is removed, but it still could
 be implemented via locator interface.

Also migrated to Java 17 and minor changes related to it.
No modules yet.